[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/gitaddnb/_version.py"

[project]
name = "gitaddnb"
dynamic = [
    "version",
]
authors = [
    {name = "Georg Wendorf", email = "georgwendorf@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"

[project.scripts]
gitaddnb = "gitaddnb:gitaddnb"
